--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -57,7 +57,7 @@
     <div class="col-md-6">
         <h2>Total</h2>
         <p id="total">$ 10.50</p>
-        
+        <%- include('dlocal-form') -%>
     </div>
 </div>
 </section>                        
